@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class RegisterVisitUI{
}

class RegisterVisitController {
    + RegisterVisitController()
    - getEmployeeFromSession()

}

class ApplicationSession
{
    + static getInstance()
    + getCurrentSession()
}

class UserSession
{
    + getUserNameByEmail()
}


class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getScheduledVisitRepository()
}

class ScheduledVisitRepository{
    +getScheduledVisit()
    +getScheduledVisitList()
}

class Announcement{
    - status
    - date
    -commission
}

class Property{
  -String ID
  -String Business
  -float size
  -float distance_from_the_city_center
  -float price
}



class Agent {
    -string passport
    -int taxNumber
    -string address
    -int phoneNumber
    -string agency
    -string email
    +RegisterVisit()

}



Repositories -> Repositories : instance
ApplicationSession -> ApplicationSession : instance
RegisterVisitController .> Repositories : repositories


ApplicationSession --> "1" UserSession : userSession


RegisterVisitController ..> ApplicationSession
RegisterVisitController ..> UserSession

RegisterVisitUI .> RegisterVisitController

RegisterVisitController ..> Property

RegisterVisitController ..> ScheduledVisitRepository : ScheduledVisitRepository

AnnouncementRepository --> "*" Announcement

Announcement "1" --> "1" Property: property

Announcement --> Agent : publishedBy/seenBy\nacceptedBy/rejectedBy

@enduml